tests/snapshots/snapshots__command_palette_unfiltered_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  15 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJECTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(2){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}PRIORITY A{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} priority  {/}{fg=#e07a7a bg=#1f232b mod=bold}(A){/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+work           {/}{fg=#6b7280 bg=#1f232b}  4{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#3a4150}  1 {/}{fg=#8aa9c9 bg=#3a4150 mod=bold}▸ {/}{fg=#e07a7a bg=#3a4150 mod=bold}(A) {/}{fg=#c8ccd4 bg=#3a4150}Finish Q2 board deck {/}{fg=#7fb3a8 bg=#3a4150}+work{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c89a6e bg=#3a4150}@la{/}{fg=#6b7280 bg=#1f232b} created   {/}{fg=#c8ccd4 bg=#1f232b}2026-05-01             {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+health         {/}{fg=#6b7280 bg=#1f232b}  3{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#8aa9c9 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Call dentist to reschedule cle{/}{fg=#6b7280 bg=#1f232b} due       {/}{fg=#c8ccd4 bg=#1f232b}2026-05-06  {/}{fg=#e07a7a bg=#1f232b}today{/}{fg=#c8ccd4 bg=#1f232b}      {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+finance        {/}{fg=#6b7280 bg=#1f232b}  2{/}{fg=#c8ccd4 bg=#1f232b}    {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}(3){/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}PRIORITY B{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#6b7280 bg=#1f232b} projects  {/}{fg=#7fb3a8 bg=#1f232b}+work{/}{fg=#c8ccd4 bg=#1f232b}                  {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+home           {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}┌ {/}{fg=#8aa9c9 bg=#1f232b mod=bold}tuxedo{/}{fg=#6b7280 bg=#1f232b} · command {/}{fg=#2a2f38 bg=#1f232b}────────────────────────────────────────┐{/}{fg=#c89a6e bg=#1f232b}ptop{/}{fg=#c8ccd4 bg=#1f232b}                {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+learning       {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b mod=bold}>{/}{fg=#c8ccd4 bg=#1f232b} █                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+personal       {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│──────────────────────────────────────────────────────────│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+travel         {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#3a4150 mod=bold} ▶ {/}{fg=#c8ccd4 bg=#3a4150 mod=bold}new task{/}{fg=#c8ccd4 bg=#3a4150}                                             {/}{fg=#6b7280 bg=#3a4150}n{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}edit current task (normal mode)                      {/}{fg=#6b7280 bg=#1f232b}e{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}1 Finish Q2 board   {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONTEXTS{/}{fg=#c8ccd4 bg=#1f232b}           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}edit current task (insert mode)                      {/}{fg=#6b7280 bg=#1f232b}i{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c89a6e bg=#1f232b}aptop{/}{fg=#c8ccd4 bg=#1f232b}               {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@errands        {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}toggle complete                                      {/}{fg=#6b7280 bg=#1f232b}x{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#e07a7a bg=#1f232b mod=bold}6{/}{fg=#c8ccd4 bg=#1f232b}                   {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@home           {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}delete task                                         {/}{fg=#6b7280 bg=#1f232b}dd{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@laptop         {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}cycle priority                                       {/}{fg=#6b7280 bg=#1f232b}p{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#c89a6e bg=#1f232b}@phone          {/}{fg=#6b7280 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}move task down                                       {/}{fg=#6b7280 bg=#1f232b}J{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}move task up                                         {/}{fg=#6b7280 bg=#1f232b}K{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}add project to current task                          {/}{fg=#6b7280 bg=#1f232b}+{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}add or remove context on current task                {/}{fg=#6b7280 bg=#1f232b}c{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}copy line to clipboard                              {/}{fg=#6b7280 bg=#1f232b}yy{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}copy body to clipboard                              {/}{fg=#6b7280 bg=#1f232b}yb{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}open task note                                       {/}{fg=#6b7280 bg=#1f232b}o{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}create or open task note                             {/}{fg=#6b7280 bg=#1f232b}O{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#1f232b bg=#1f232b mod=bold}   {/}{fg=#c8ccd4 bg=#1f232b}undo                                                 {/}{fg=#6b7280 bg=#1f232b}u{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b mod=bold}↑↓ / Ctrl-N/P{/}{fg=#6b7280 bg=#1f232b} navigate · {/}{fg=#6b7280 bg=#1f232b mod=bold}Enter{/}{fg=#6b7280 bg=#1f232b} run · {/}{fg=#6b7280 bg=#1f232b mod=bold}Esc{/}{fg=#6b7280 bg=#1f232b} cancel{/}{fg=#c8ccd4 bg=#1f232b}         {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} COMMAND {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}type to filter · Enter run · Esc cancel{/}{bg=#252a33}           {/}{fg=#6b7280 bg=#252a33}15 open · 2026-05-06 · tuxedo 2026.7.1 {/}
