tests/snapshots/snapshots__command_palette_unfiltered_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home            ┌ tuxedo · command ────────────────────────────────────────┐ptop                
   +learning        │ > █                                                      │                    
   +personal        │──────────────────────────────────────────────────────────│                    
   +travel          │ ▶ new task                                             n │                    
                    │   edit current task (normal mode)                      e │1 Finish Q2 board   
 CONTEXTS           │   edit current task (insert mode)                      i │aptop               
   @errands         │   toggle complete                                      x │6                   
   @home            │   delete task                                         dd │                    
   @laptop          │   cycle priority                                       p │                    
   @phone           │   add project to current task                          + │                    
                    │   add or remove context on current task                c │                    
                    │   copy line to clipboard                              yy │                    
                    │   copy body to clipboard                              yb │                    
                    │   undo                                                 u │                    
                    │   cursor down                                      j / ↓ │                    
                    │   cursor up                                        k / ↑ │                    
                    │   jump to first task                                  gg │                    
                    │   jump to last task                                    G │                    
                    │  ↑↓ / Ctrl-N/P navigate · Enter run · Esc cancel         │                    
                    └──────────────────────────────────────────────────────────┘                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 COMMAND   type to filter · Enter run · Esc cancel           15 open · 2026-05-06 · tuxedo 2026.6.3
