tests/snapshots/snapshots__empty_state_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  0 tasks  •  {/}{fg=#8aa9c9 bg=#1f232b}sort:priority{/}{bg=#1f232b}                                         {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}┌ {/}{fg=#8aa9c9 bg=#1a1d23 mod=bold}tuxedo{/}{fg=#2a2f38 bg=#1a1d23} ──────────────────────────────────────────────┐{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#8aa9c9 bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}          {/}{fg=#8aa9c9 bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#8aa9c9 bg=#1a1d23}████{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#8aa9c9 bg=#1a1d23}████{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#8aa9c9 bg=#1a1d23}██████{/}{fg=#e07a7a bg=#1a1d23}██{/}{fg=#8aa9c9 bg=#1a1d23}██████{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#8aa9c9 bg=#1a1d23}████{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#8aa9c9 bg=#1a1d23}████{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#8aa9c9 bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}          {/}{fg=#8aa9c9 bg=#1a1d23}██{/}{fg=#c8ccd4 bg=#1a1d23}                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                                                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}  no tasks yet — let's get started                    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                                                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}   {/}{fg=#c89a6e bg=#1a1d23 mod=bold}n   {/}{fg=#c8ccd4 bg=#1a1d23}add a task                                     {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}   {/}{fg=#c89a6e bg=#1a1d23 mod=bold}?   {/}{fg=#c8ccd4 bg=#1a1d23}show all keybindings                           {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}   {/}{fg=#c89a6e bg=#1a1d23 mod=bold},   {/}{fg=#c8ccd4 bg=#1a1d23}settings                                       {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}   {/}{fg=#c89a6e bg=#1a1d23 mod=bold}q   {/}{fg=#c8ccd4 bg=#1a1d23}quit                                           {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}                                                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}│{/}{fg=#c8ccd4 bg=#1a1d23}   {/}{fg=#6b7280 bg=#1a1d23}format: {/}{fg=#e07a7a bg=#1a1d23 mod=bold}(A) {/}{fg=#c8ccd4 bg=#1a1d23}Buy milk {/}{fg=#7fb3a8 bg=#1a1d23}+shop {/}{fg=#c89a6e bg=#1a1d23}@home {/}{fg=#d4b06a bg=#1a1d23}due:2026-05-12{/}{fg=#c8ccd4 bg=#1a1d23}    {/}{fg=#2a2f38 bg=#1a1d23}│{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                      {/}{fg=#2a2f38 bg=#1a1d23}└──────────────────────────────────────────────────────┘{/}{bg=#1a1d23}                      {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{bg=#1a1d23}                                                                                                    {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} NORMAL {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}j/k · n new · r reschedule · x done · / search · ? h{/}{fg=#6b7280 bg=#252a33}0 open · 2026-05-06 · tuxedo 2026.6.3 {/}
