tests/snapshots/snapshots__empty_state_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 ▶▮◀ /tmp/tuxedo-snapshot.txt  •  0 tasks  •  sort:priority                                         
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                      ┌ tuxedo ──────────────────────────────────────────────┐                      
                      │                    ██          ██                    │                      
                      │                    ████  ██  ████                    │                      
                      │                    ██████████████                    │                      
                      │                    ████  ██  ████                    │                      
                      │                    ██          ██                    │                      
                      │                                                      │                      
                      │  no tasks yet — let's get started                    │                      
                      │                                                      │                      
                      │   n   add a task                                     │                      
                      │   ?   show all keybindings                           │                      
                      │   ,   settings                                       │                      
                      │   q   quit                                           │                      
                      │                                                      │                      
                      │   format: (A) Buy milk +shop @home due:2026-05-12    │                      
                      └──────────────────────────────────────────────────────┘                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL   j/k · n new · r reschedule · x done · / search · ? h0 open · 2026-05-06 · tuxedo 2026.6.3
